<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_setup_wallet_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/textColorWhite"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/txt_dividers_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/dividers_title"
            android:textAlignment="center"
            android:textColor="@color/textColorBlack"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/etxt_setup_wallet_balance"/>

    <TextView
            android:id="@+id/txt_dividers_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/setup_wallet_bottom_divider_txt"
            android:textAlignment="center"
            android:textColor="@color/textColorBlack"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/txt_dividers_upper"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/txt_dividers_title" />

    <TextView
            android:id="@+id/txt_dividers_upper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/setup_wallet_upper_divider_txt"
            android:textAlignment="center"
            android:textColor="@color/textColorBlack"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/txt_dividers_bottom"
            app:layout_constraintTop_toBottomOf="@id/txt_dividers_title" />

    <TextView
            android:id="@+id/txt_wallet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/setup_wallet_title_txt"
            android:textAlignment="center"
            android:textColor="@color/textColorBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/etxt_setup_wallet_balance"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/txt_setup_wallet_dialog_title"/>

    <TextView
            android:id="@+id/txt_wallet_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/setup_wallet_balance_txt"
            android:textAlignment="center"
            android:textColor="@color/textColorBlack"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_dividers_title"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/etxt_setup_wallet_title" />

    <ImageView
        android:id="@+id/img_balance_alert"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/etxt_setup_wallet_balance"
        app:layout_constraintEnd_toEndOf="@+id/etxt_setup_wallet_balance"
        app:layout_constraintTop_toTopOf="@+id/etxt_setup_wallet_balance"
        app:srcCompat="@drawable/ic_alert"
        tools:srcCompat="@drawable/ic_alert" />


    <ImageView
        android:id="@+id/img_upper_divider_alert"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/etxt_setup_wallet_upper_divider"
        app:layout_constraintEnd_toEndOf="@+id/etxt_setup_wallet_upper_divider"
        app:layout_constraintTop_toTopOf="@+id/etxt_setup_wallet_upper_divider"
        app:srcCompat="@drawable/ic_alert"
        tools:srcCompat="@drawable/ic_alert" />

    <ImageView
            android:id="@+id/img_bottom_divider_alert"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/etxt_setup_wallet_bottom_divider"
            app:layout_constraintEnd_toEndOf="@id/etxt_setup_wallet_bottom_divider"
            app:layout_constraintTop_toTopOf="@id/etxt_setup_wallet_bottom_divider"
            app:srcCompat="@drawable/ic_alert"
            tools:srcCompat="@drawable/ic_alert" />

    <EditText
            android:id="@+id/etxt_setup_wallet_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/setup_wallet_title_txt"
            android:textColor="@color/textColorBlack"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/txt_wallet_title"
            app:layout_constraintTop_toBottomOf="@id/txt_setup_wallet_dialog_title"/>


    <EditText
            android:id="@+id/etxt_setup_wallet_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/setup_wallet_balance_txt"
            android:inputType="numberSigned|number|numberDecimal"
            android:textColor="@color/textColorBlack"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/txt_wallet_balance"
            app:layout_constraintTop_toBottomOf="@id/etxt_setup_wallet_title"/>


    <EditText
            android:id="@+id/etxt_setup_wallet_upper_divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:hint="@string/setup_wallet_upper_divider_txt"
            android:inputType="numberSigned|number|numberDecimal"
            android:textColor="@color/textColorBlack"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@id/etxt_setup_wallet_bottom_divider"
            app:layout_constraintTop_toBottomOf="@id/txt_dividers_upper"/>


    <EditText
            android:id="@+id/etxt_setup_wallet_bottom_divider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="@string/setup_wallet_bottom_divider_txt"
            android:inputType="numberSigned|number|numberDecimal"
            android:textColor="@color/textColorBlack"
            app:layout_constraintEnd_toStartOf="@+id/etxt_setup_wallet_upper_divider"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/txt_dividers_bottom" />


    <TextView
            android:id="@+id/txt_color_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/color_picker_title"
            android:textAlignment="center"
            android:textColor="@color/textColorBlack"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/btn_color_picker"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/etxt_setup_wallet_bottom_divider"/>

    <at.markushi.ui.CircleButton
            android:id="@+id/btn_color_picker"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cb_color="#99CC00"
            app:cb_pressedRingWidth="8dip"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/txt_color_picker"
            app:layout_constraintTop_toBottomOf="@+id/etxt_setup_wallet_upper_divider"/>


    <Button
            android:id="@+id/btn_setup_wallet_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_red_dark"
            android:text="@string/setup_delete_wallet_txt"
            android:textColor="@color/textColorWhite"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/btn_color_picker"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"/>


    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>