<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            app:showAsAction="always"
            android:icon="@drawable/ic_control_money_add"
            android:id="@+id/btn_menu_create_wallet"/>
</menu>